# lms_events_aggregator

./: .env.template  .gitignore  Dockerfile  pyproject.toml  run.sh
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 7e98fdc6ccc8_init.py  e756dff318d1_create_models_event_ticket_syncmetadata.py  f8d9ab2f53c3_make_event_provider_created_at_nullable.py
src/: main.py
src/api/: dependencies.py  error_handlers.py  router.py
src/api/routes/: events.py  health.py  sync.py  tickets.py
src/core/: database.py  exeptions.py  logging.py  models.py  schemas.py
src/core/clients/: events_provider.py
src/core/repositories/: events.py  sync.py  tickets.py
src/core/usecases/: cancel_ticket.py  create_ticket.py  get_event_detail.py  get_events.py  get_seats.py  sync_events.py
